# blast

./: .gitignore  Cargo.toml  README.md  city_boundaries_fix.sh  flake.nix  install_blast.sh  rustfmt.toml  setup_test_env.sh  shell.nix
docs/: asset-management.md
src/: assets.rs  cargo.rs  commands.rs  configs.rs  cronjobs.rs  cronjobs_tui.rs  dashboard.rs  database.rs  dependencies.rs  git.rs  interactive.rs  locale.rs  logger.rs  main.rs  models.rs  output.rs  progress.rs  project.rs  sparks.rs  structs.rs
src/layouts/: blast_dashboard.kdl
src/locale/: locale_helpers.rs  locale_tui.rs
temp/: materialize_scss.rs
template/: .gitignore  Cargo.toml  Catalyst.toml  README.md
template/src/: main.rs
template/src/assets/sass/: contrast.scss  earthly.scss  forest.scss  pastel.scss  retro.scss  solarized.scss  urban.scss  warm.scss  winter.scss
template/src/database/seeds/: 002_add_admin.sql
template/src/middleware/: guards.rs  jwt.rs  mod.rs
template/src/routes/private/: admin.rs  user.rs
template/src/routes/public/: auth.rs  home.rs
template/src/services/: mod.rs
template/src/services/builders/: context.rs  mod.rs
template/src/structs/auth/: users.rs
template/templates/auth/: login.html.tera  register.html.tera
template/templates/partials/: footer.tera  header.tera
testconfig/: Catalyst.toml
tests/: README.md
